fix layout problem with scrolling main content

--- a/public/styles/base/main.less
+++ b/public/styles/base/main.less
@@ -42,6 +42,11 @@ body, html {
   height: 100%;
 }
 
+body {
+  padding-top: 66px;
+  padding-bottom: 62px;
+}
+
 .main-header, .main-footer {
   position: absolute;
   left: 0;
@@ -59,8 +64,6 @@ body, html {
 
 .content-wrapper {
   overflow: auto;
-  padding-top: 66px;
-  padding-bottom: 62px;
   height: 100%;
 }
 
